# huminfra_hackathon

./: .gitattributes  README.md  demo.ipynb  pyproject.toml
.devcontainer/: devcontainer.json
semantic_search/code/: chunk_text.py
semantic_search/data/: A_II_12.txt  A_II_17.txt  A_II_1a.txt  A_II_1b.txt  A_II_20.txt  A_II_22.txt  A_II_24.txt  A_II_25.txt  A_II_27.txt  A_II_28.txt  A_II_4.txt  B_II_7.txt  E_X_3.txt  E_X_4.txt  E_X_5.txt  E_X_7.txt  embedded_data.json  embedded_questions.json
semantic_search/notebooks/: chunk_text.ipynb  convert_questions_to_ls_json.ipynb  openai_embeddings.ipynb  question_generation.ipynb
semantic_search/output/: example_questions.txt
